[tool.poetry]
name = "snekcord"
version = "1.0.0a"
description = "A work-in-progress Discord API wrapper written in Python."
authors = ["asleep-cult <asleep.cult@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
wsaio = "^1.0.0"
loguru = "^0.5.3"
attrs = "^21.4.0"
asygpy = "^0.1.1"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
blue = "^0.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.blue]
line-length = 100

[tool.pyright]
reportUnnecessaryIsInstance = false
reportImportCycles = false
